--- a/projetofinalcvti/style.css
+++ b/projetofinalcvti/style.css
@@ -1,112 +1,61 @@
-.carousel-item {
-    height: 100vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  .carousel-caption {
-    bottom: 270px;
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  
   }
   
-  .carousel-caption h5 {
-    font-size: 45px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-top: 25px;
+  .center{
+  
+    max-width: 1100px;
+    padding: 0 2%;
+    display: flex;
+    margin: 0 auto;
+  
   }
   
-  .carousel-caption p {
-    width: 75%;
-    margin: auto;
-    font-size: 18px;
-    line-height: 1.9;
-  }
   
-  .navbar-light .navbar-brand {
-    color: #fff;
-    font-size: 25px;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 2px;
-  }
   
-  .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
-    color: #fff;
-    
-    
-  }
   
-  .navbar-light .navbar-nav .nav-link {
-    color: #fff;
-    
-  }
   
-  .navbar-toggler {
-    background: #fff;
-    
-  }
+  /* começa aqui eventos exposições*/
   
-  .navbar-nav {
-    text-align: center;
-
-  }
   
-  .nav-link {
-    padding: .2rem 1rem;
-    color:white;
-    
-  }
   
-  .nav-link.active,.nav-link:focus{
-    color: #fff;
-  }
-  
-  .navbar-toggler {
-    padding: 1px 5px;
-    font-size: 18px;
-    line-height: 0.3;
-  }
-  
-  .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    color: #fff;
-    
-  }
-  /*começa daqui*/
-
   body
-{
-  background-color:#eee
-}
-.wrap
-{
+  {
+  
+  background-color:#ffffff
+  }
+  .wrap
+  {
   margin:50px auto 0 auto;
   width:100%;
   display:flex;
   align-items:space-around;
   max-width:1200px;
-}
-.tile
-{
+  }
+  .tile
+  {
   width:380px;
   height:380px;
   margin:10px;
-  background-color:#ffee00;
+  background-color:#0d0654;
   display:inline-block;
   background-size:cover;
   position:relative;
   cursor:pointer;
   transition: all 0.4s ease-out;
-  box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.44);
+  box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.44);
   overflow:hidden;
-  color:white;
+  color:rgb(240, 154, 35);
   font-family:'Roboto';
   
-}
-.tile img
-{
+  }
+  .tile img
+  {
+  
   height:100%;
   width:100%;
   position:absolute;
@@ -114,59 +63,60 @@
   left:0;
   z-index:0;
   transition: all 0.4s ease-out;
-}
-.tile .text
-{
-/*   z-index:99; */
+  }
+  .tile .text
+  {
+  /*   z-index:99; */
   position:absolute;
   padding:30px;
   height:calc(100% - 60px);
-}
-.tile h1
-{
- 
+  
+  }
+  .tile h1
+  {
+  
   font-weight:300;
   margin:0;
   text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-}
-.tile h2
-{
+  }
+  .tile h2
+  {
   font-weight:100;
   margin:20px 0 0 0;
   font-style:italic;
    transform: translateX(200px);
-}
-.tile p
-{
+  }
+  .tile p
+  {
   font-weight:300;
   margin:20px 0 0 0;
   line-height: 25px;
-/*   opacity:0; */
+  /*   opacity:0; */
   transform: translateX(-200px);
   transition-delay: 0.2s;
-}
-.animate-text
-{
+  }
+  .animate-text
+  {
   opacity:0;
   transition: all 0.6s ease-in-out;
-}
-.tile:hover
-{
-/*   background-color:#99aeff; */
-box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
+  }
+  .tile:hover
+  {
+  /*   background-color:#99aeff; */
+  box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   transform:scale(1.05);
-}
-.tile:hover img
-{
+  }
+  .tile:hover img
+  {
   opacity: 0.2;
-}
-.tile:hover .animate-text
-{
+  }
+  .tile:hover .animate-text
+  {
   transform:translateX(0);
   opacity:1;
-}
-.dots
-{
+  }
+  .dots
+  {
   position:absolute;
   bottom:20px;
   right:30px;
@@ -179,10 +129,10 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   align-items:center;
   justify-content:space-around;
   
-}
-
-.dots span
-{
+  }
+  
+  .dots span
+  {
     width: 5px;
     height:5px;
     background-color: currentColor;
@@ -191,62 +141,62 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   opacity:0;
   transition: transform 0.4s ease-out, opacity 0.5s ease;
   transform: translateY(30px);
- 
-}
-
-.tile:hover span
-{
+  
+  }
+  
+  .tile:hover span
+  {
   opacity:1;
   transform:translateY(0px);
-}
-
-.dots span:nth-child(1)
-{
+  }
+  
+  .dots span:nth-child(1)
+  {
    transition-delay: 0.05s;
-}
-.dots span:nth-child(2)
-{
+  }
+  .dots span:nth-child(2)
+  {
    transition-delay: 0.1s;
-}
-.dots span:nth-child(3)
-{
+  }
+  .dots span:nth-child(3)
+  {
    transition-delay: 0.15s;
-}
-
-
-@media (max-width: 1000px) {
+  }
+  
+  
+  @media (max-width: 1000px) {
   .wrap {
    flex-direction: column;
     width:400px;
   }
-}
-
-:root {
+  }
+  
+  :root {
     /* Font Color */
     --light-theme: #f8f9fa;
     
     /* Circle Width */
     --circle-diameter: 300px;
-
+  
     /* Font Family */
     --fonts-style-x: 'neuzeit-grotesk', sans-serif;
     --fonts-style-y: 'neuzeit-grotesk', sans-serif;
-
+  
     /* Font Weight */
     --light: 300;
     --regular: 400;
     --bold: 700;
     --black: 900;
-
-}
-
-
-/* ------------- */
-/* Basic Setting */
-/* ------------- */
-
-html,
-body {
+  
+  }
+  
+  
+  /* ------------- */
+  /* Basic Setting */
+  /* ------------- */
+  
+  html,
+  body {
     box-sizing: border-box;
     font-family: 'neuzeit-grotesk', sans-serif;
     font-weight: 300;
@@ -255,13 +205,14 @@ body {
     line-height: 1.5;
     color: #ffffffee;
     scroll-behavior: smooth;
-}
-
-*, *::before, *::after {
+   
+  }
+  
+  *, *::before, *::after {
     box-sizing: inherit;
-}
-
-main {
+  }
+  
+  main {
     position: relative;
     display: flex;
     justify-content: center;
@@ -270,14 +221,22 @@ main {
     height: 100vh;
     min-height: 640px;
     background-color: var(--light-theme);
-}
-
-::selection {
+  }
+  
+  ::selection {
     color: #fff;
     background-color: var(--light-theme);
-}
-
-
+  }
+  
+  
+  
+  /*termina aqui eventos exposições*/
+  
+  
+  
+  
+  
+/*Rodapé*/
 /* ------------- */
 /* Content Style */
 /* ------------- */
@@ -291,143 +250,82 @@ main {
     height: var(--circle-diameter);
     overflow: hidden;
     border-radius: var(--circle-diameter);
-    background-color: #eee;
+    background-color: #091179;
     transition: 5000ms;
     cursor: grab;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&display=swap");
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Big Shoulders Display", cursive;
-  height: 100px;
+/*
+.google-map::after {
+    content: "";
+    position: absolute;
+    width: var(--circle-diameter);
+    height: var(--circle-diameter);
+    border-radius: var(--circle-diameter);
+    background: radial-gradient(circle, #ffffff00 0%, #f8f9fa 50%);
+    pointer-events: none;
 }
+*/
 
-.banner {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.banner video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  width: 100%;
+.google-map .map-frame {
+    width: 48vw;
+    height: 80vh;
+    background-color: var(--light-theme);
 }
 
-.banner .content {
-  position: relative;
-  z-index: 1;
-  max-width: 1000px;
-  margin: 0 auto;
-  text-align: center;
+.google-map iframe {
+    position: relative;
+    width: 48vw;
+    height: 80vh;
+    pointer-events: visibleStroke;
 }
 
-.banner .content h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 5.5em;
-  text-transform: uppercase;
-  color: #ffff;
+
+/* ------------------ */
+/* Interactive Effect */
+/* ------------------ */
+
+.google-map:hover {
+    width: 48vw;
+    height: 80vh;
+    border-radius: 0;
 }
 
-.banner .content p {
-  font-size: 1.5em;
-  color: #ffff;
+.row {
+
+  background-color: #ff9900;
+  right: 0px;
+  left: 0px;
 }
 
-.banner .content img {
-  width: 40px;
-  height: 40px;
+.footer-logo {
+
+  background-color: var(--light-theme);
+  margin-top: 5px;
 }
-/*letra*/
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+
+.form-ouvidoria .btn {
+
+  margin-top: 5px;
 }
-body {
-  background-color: #151320;
+.redes-sociais {
+display: flex;
+
 }
-section {
-  height: 100vh;
-  display: flex;
-  padding: 0 4em;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+.form-ouvidoria {
+ width: 35vw;
+    height: 80vh;
+  
 }
-.container {
-  perspective: 1000px;
-  height: 28vh;
-  width: 100%;
-  cursor: pointer;
+.form-group {
+width: 35vw;
+height: 80vh;
+
 }
-.card {
-  transform-style: preserve-3d;
-  height: 100%;
-  width: 100%;
-  transition: 0.5s ease;
-}
-.front,
-.back {
-  height: 100%;
-  width: 100%;
-  transform-style: preserve-3d;
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: 0.4em;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  backface-visibility: hidden;
-}
-.front {
-  background: linear-gradient(to right, #006589, #13348a);
-}
-.front img {
-  width: 5em;
-}
-.content {
-  transform: translateZ(60px);
-}
-.content h3 {
-  font-size: 22px;
-  margin-top: 1em;
-  font-weight: 600;
-  letter-spacing: 0.04em;
-}
-.content p {
-  font-size: 14px;
-  line-height: 2em;
-  letter-spacing: 0.02em;
-  padding: 0 3em;
-}
-.back {
-  background-color: #28253a;
-  transform: rotateX(180deg);
-}
-.container:hover .card {
-  transform: rotateX(180deg);
-}
-@media screen and (min-width: 992px) {
-  section {
-    padding: 0 1em;
-  }
-  .container {
-    flex-basis: 0 0 33.33%;
-    max-width: 33.33%;
-    padding: 0 1.5em;
-  }
+.teste{
+
+
+  color: black;
+  text-decoration: none;
+
 }
